// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <div
      class="t-upload"
    >
      <input
        hidden=""
        type="file"
      />
      <div
        class="t-upload__single t-upload__single-file"
      >
        <div
          class="t-upload__trigger"
        >
          <button
            class="t-button t-button--theme-default t-button--variant-outline"
            style="position: relative;"
          >
            <svg
              class="t-icon t-icon-upload t-size-m"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M3.74 6.68L7.5 2.9v8.59h1V2.91l3.76 3.77.71-.7-4.62-4.63a.5.5 0 00-.7 0L3.03 5.97l.7.7z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M2 11v2a1 1 0 001 1h10a1 1 0 001-1v-2h-1v2H3v-2H2z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
            <span
              class="t-button__text"
            >
              选择文件
            </span>
          </button>
        </div>
      </div>
      <small
        class="t-upload__tips t-upload__small"
      >
        上传文件大小在 5M 以内
      </small>
    </div>
  </div>
</DocumentFragment>
`;

exports[`draggable.jsx 1`] = `
<DocumentFragment>
  <div>
    <div>
      是否自动上传：
      <button
        class="t-switch"
        role="switch"
        type="button"
      >
        <span
          class="t-switch__handle"
        />
        <div
          class="t-switch__content"
        />
      </button>
      <br />
    </div>
    <div
      class="t-radio-group t-radio-group-medium t-radio-group-outline"
    >
      <label
        class="t-radio t-is-checked"
      >
        <input
          checked=""
          class="t-radio__former"
          readonly=""
          type="radio"
          value="file"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          文件拖拽上传
        </span>
      </label>
      <label
        class="t-radio"
      >
        <input
          class="t-radio__former"
          readonly=""
          type="radio"
          value="image"
        />
        <span
          class="t-radio__input"
        />
        <span
          class="t-radio__label"
        >
          图片拖拽上传
        </span>
      </label>
    </div>
    <br />
    <br />
    <div
      class="t-upload"
    >
      <input
        hidden=""
        type="file"
      />
      <div
        class="t-upload__dragger t-upload__dragger-center"
      >
        <div
          class="t-upload__trigger"
        >
          <div>
            <span
              class="t-upload__highlight"
            >
              点击上传
            </span>
            <span>
                /  拖拽到此区域
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`image.jsx 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="t-upload"
      >
        <input
          accept="image/*"
          hidden=""
          type="file"
        />
        <ul
          class="t-upload-card"
        >
          <li
            class="t-upload-card__item t-is--background"
          >
            <div
              class="t-upload-card-container t-upload-card__box"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <p
                class="t-upload__small"
              >
                点击上传图片
              </p>
            </div>
          </li>
        </ul>
        <small
          class="t-upload__tips t-upload__small"
        >
          请选择单张图片文件上传
        </small>
      </div>
    </div>
    <br />
    <br />
    <div>
      <div
        class="t-upload"
      >
        <input
          accept="image/*"
          hidden=""
          type="file"
        />
        <ul
          class="t-upload-card"
        >
          <li
            class="t-upload-card__item t-is--background"
          >
            <div
              class="t-upload-card__content t-upload-card__box"
            >
              <img
                class="t-upload-card__image"
                src="http://0729iwiki-75822.gzc.vod.tencent-cloud.com/u=1595072465,3644073269&fm=193&f=GIF.jpeg"
              />
              <div
                class="t-upload-card__mask"
              >
                <span
                  class="t-upload-card__mask__item"
                >
                  <svg
                    class="t-icon t-icon-browse t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M10.88 8a2.88 2.88 0 11-5.76 0 2.88 2.88 0 015.76 0zm-1 0a1.88 1.88 0 10-3.76 0 1.88 1.88 0 003.76 0z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                    <path
                      d="M1.12 8.23A7.72 7.72 0 008 12.5c2.9 0 5.54-1.63 6.88-4.27L15 8l-.12-.23A7.73 7.73 0 008 3.5a7.74 7.74 0 00-6.88 4.27L1 8l.12.23zM8 11.5A6.73 6.73 0 012.11 8 6.73 6.73 0 0113.9 8 6.74 6.74 0 018 11.5z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
                <span
                  class="t-upload-card__mask__item-divider"
                />
                <span
                  class="t-upload-card__mask__item"
                >
                  <svg
                    class="t-icon t-icon-delete t-size-m"
                    fill="none"
                    height="1em"
                    viewBox="0 0 16 16"
                    width="1em"
                  >
                    <path
                      d="M6 12V6h1v6H6zM9 6v6h1V6H9z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                    <path
                      d="M10.5 3H14v1h-1v10a1 1 0 01-1 1H4a1 1 0 01-1-1V4H2V3h3.5V1.8c0-.44.36-.8.8-.8h3.4c.44 0 .8.36.8.8V3zm-4 0h3V2h-3v1zM4 4v10h8V4H4z"
                      fill="currentColor"
                      fill-opacity="0.9"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
        </ul>
        <small
          class="t-upload__tips t-upload__small"
        >
          默认已上传文件
        </small>
      </div>
    </div>
    <br />
    <br />
    <div>
      <div
        class="t-upload"
      >
        <input
          accept="image/*"
          hidden=""
          multiple=""
          type="file"
        />
        <ul
          class="t-upload-card"
        >
          <li
            class="t-upload-card__item t-is--background"
          >
            <div
              class="t-upload-card-container t-upload-card__box"
            >
              <svg
                class="t-icon t-icon-add t-size-m"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
              <p
                class="t-upload__small"
              >
                点击上传图片
              </p>
            </div>
          </li>
        </ul>
        <small
          class="t-upload__tips t-upload__small"
        >
          允许选择多张图片文件上传，最多只能上传 3 张图片
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
